# OpenMAMA

./: .appveyor.yml  .arcconfig  .clang-format  .dockerignore  .gitignore  .semgrepignore  .travis.yml  CHANGES  CMakeLists.txt  COPYING  LICENSE-3RD-PARTY.txt  LICENSE.md  Makefile  OpenMAMA-csharp.sln  OpenMama.sln  README  README.md  SConstruct  VERSION  configure  generateBuildFiles.sh  generateWinDist.bat  settings.gradle  vcpkg.json
common/: CMakeLists.txt
common/c_cpp/: CMakeLists.txt  Makefile.am  SConscript  SConscript.win  configure.ac
common/c_cpp/src/: Makefile.am
common/c_cpp/src/c/: CMakeLists.txt  MRSWLock.c  Makefile.am  SConscript  SConscript.win  commonc.vcproj  commonc.vcxproj  destroyHandle.c  destroyHandle.h  environment.c  fileparser.c  fileutils.c  libyywrap.c  list.c  list.h  lookup2.c  lookup2.h  machine.c  memnode.c  mempool.c  platform.c  platform.h  properties.l  property.c  property.h  propertyinternal.h  queue.c  strutils.c  systree.h  thread.c  timers.c  timers.h  wMessageStats.c  wSemaphore.c  wlock.c  wlock.h  wtable.c
common/c_cpp/src/cpp/: CMakeLists.txt  CommonStrUtils.cpp  Lock.cpp  Makefile.am  SConscript  SConscript.win  commoncpp.vcproj  commoncpp.vcxproj
common/c_cpp/src/gunittest/: MainUnitTestC.cpp  MainUnitTestC.h  Makefile.am  SConscript
mama/: CMakeLists.txt  VERSION.scons
mama/c_cpp/: CMakeLists.txt  Makefile.am  SConscript  SConscript.win  ac_cxx_member_templates.m4  configure.ac  doxyconfig-c.in  doxyconfig-cpp.in
mama/c_cpp/cmake/: FindAPR.cmake  FindProton.cmake  c-cpp-common.cmake
mama/c_cpp/doc/: footer.html  header.html  style.css
mama/c_cpp/src/: Makefile.am
mama/c_cpp/src/c/: CMakeLists.txt  Makefile.am  SConscript  SConscript.win  bridge.c  bridge.h  clientmanageresponder.c  clientmanageresponder.h  datetime.c  datetimeimpl.h  dictionary.c  dictionaryimpl.h  dqpublisher.c  dqpublishermanager.c  dqstrategy.c  dqstrategy.h  dqstrategyplugin.c  dqstrategyplugin.h  endpointpool.c  entitlement.c  entitlementinternal.h  entitlementlibraries.c.in  error.c  fielddesc.c  fielddescimpl.h  fileutils.c  fileutils.h  ft.c  generateMamaSourceFiles.bat  generateMamaVersion.bat  imagerequest.c  imagerequest.h  inbox.c  inboximpl.h  io.c  listenermsgcallback.c  listenermsgcallback.h  log.c  mama.c  mamaStrUtils.c  (+73 more)
mama/c_cpp/src/cpp/: BasicSubscriptionImpl.h  BasicWildCardSubscriptionImpl.h  CMakeLists.txt  FieldDescriptorImpl.h  InboxImpl.h  Makefile.am  MamaBasicSubscription.cpp  MamaBasicWildCardSubscription.cpp  MamaDQPublisher.cpp  MamaDQPublisherImpl.h  MamaDQPublisherManager.cpp  MamaDictionary.cpp  MamaDispatcher.cpp  MamaFieldDescriptor.cpp  MamaFt.cpp  MamaInbox.cpp  MamaIo.cpp  MamaLogFile.cpp  MamaMsg.cpp  MamaMsgField.cpp  MamaMsgQual.cpp  MamaPrice.cpp  MamaPublisher.cpp  MamaPublisherImpl.h  MamaQueue.cpp  MamaQueueGroup.cpp  MamaReservedFields.cpp  MamaResourcePool.cpp  MamaSource.cpp  MamaSourceDerivative.cpp  MamaSourceGroup.cpp  MamaSourceGroupManager.cpp  MamaSourceManager.cpp  MamaStat.cpp  MamaStatImpl.h  MamaStatsCollector.cpp  MamaStatsCollectorImpl.h  MamaStatus.cpp  MamaSubscription.cpp  MamaSubscriptionImpl.h  (+18 more)
mama/c_cpp/src/examples/: Makefile.am  SConscript  SConscript.win  mama.properties
mama/c_cpp/src/gunittest/: Makefile.am  Makefile.vcc  SConscript
mama/c_cpp/src/testtools/: Makefile.am  SConscript  SConscript.win
mama/dotnet/: SConscript  SConscript.win  doxyconfig-cs.in  linear.html
mama/dotnet/src/cs/: AssemblyInfo.cs  CMakeLists.txt  ISourceManager.cs  Local.testsettings  MAMA.cs  MamaBasicSubscription.cs  MamaBasicSubscriptionCallback.cs  MamaBridge.cs  MamaCallbackStore.cs  MamaCallbackWrapper.cs  MamaClientProfile.cs  MamaDictionary.cs  MamaDictionaryCallback.cs  MamaException.cs  MamaFieldDescriptor.cs  MamaFtMember.cs  MamaFtMemberCallback.cs  MamaInbox.cs  MamaInboxCallback.cs  MamaIo.cs  MamaIoCallback.cs  MamaIoType.cs  MamaLogFileCallback.cs  MamaLogFileCallback2.cs  MamaMsg.cs  MamaMsgField.cs  MamaMsgFieldIterator.cs  MamaPayloadBridge.cs  MamaPrice.cs  MamaPublisher.cs  MamaPublisherCallback.cs  MamaQueue.cs  MamaQueueEnqueueCallback.cs  MamaQueueEventCallback.cs  MamaQueueGroup.cs  MamaQueueManager.cs  MamaQueueMonitorCallback.cs  MamaRegexChannelFilter.cs  MamaReservedFields.cs  MamaResourcePool.cs  (+25 more)
mama/dotnet/src/examples/: CMakeLists.txt
mama/dotnet/src/nunittest/: CMakeLists.txt  MamaBaseLogTest.cs  MamaCommon.cs  MamaDisableLoggingTest.cs  MamaEnableLoggingTest.cs  MamaEnqueueEventTest.cs  MamaGetLogLevelTest.cs  MamaLogCallbackTest.cs  MamaLogMessageTest.cs  MamaLogTest.cs  MamaLogToFileTest.cs  MamaMsgVectorMsgTest.cs  MamaMsgVectorPriceTest.cs  MamaMsgVectorStringTest.cs  MamaPublisherTest.cs  MamaRegexChannelFilterTest.cs  MamaResourcePoolTest.cs  MamaSetLogCallbackTest.cs  MamaSetLogFilePolicyTest.cs  MamaSetLogLevelTest.cs  MamaSetLogSizeTest.cs  NUnitTest.csproj  SConscript.win  mamadotnetunittests.csproj
mama/dotnet/src/testtools/: CMakeLists.txt
mama/jni/: SConscript  SConscript.win  build.gradle  build.xml  configure.ac  doxyconfig-java.in  settings.gradle
mama/jni/doc/: overview-jni.html
mama/jni/src/: CMakeLists.txt  Makefile.am
mama/jni/src/c/: CMakeLists.txt  Makefile.am  SConscript  SConscript.win  mamabasicsubscriptionjni.c  mamabridgejni.c  mamaconnectionjni.c  mamadatetimejni.c  mamadictionaryjni.c  mamadispatcherjni.c  mamadqpublisherjni.c  mamadqpublishermanagerjni.c  (+21 more)
mamda/: CMakeLists.txt  VERSION.scons  settings.gradle
mamda/c_cpp/: CMakeLists.txt  Makefile.am  SConscript  SConscript.win  configure.ac  doxyconfig-cpp.in
mamda/c_cpp/doc/: footer.html  style.css
mamda/c_cpp/src/: Makefile.am
mamda/dotnet/: SConscript.win  doxyconfig-cs.in
mamda/java/: CMakeLists.txt  SConscript  SConscript.win  build.gradle  build.xml  doxyconfig-java.in  install.bat  mamdajava.vcproj  mamdalistenj  mamdalistenj.bat  overview.html  settings.gradle
tutorials/c/01-quickstart/: CMakeLists.txt  quickstart.c
tutorials/c/02-resourcepool/: CMakeLists.txt  resourcepool.c
tutorials/cpp/01-quickstart/: CMakeLists.txt  quickstart.cpp
(+1907 files in other folders)
