cmake_minimum_required (VERSION 2.8.3)
project (mama)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/c_cpp/cmake)
include(mama-common)

# Common flag setup
if(WIN32)
	add_definitions(-DMAMA_DLL)
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /NODEFAULTLIB:libcmt.lib /NODEFAULTLIB:libc.lib")
endif()
add_definitions(-DOPENMAMA_INTEGRATION)

get_component_version(${CMAKE_CURRENT_LIST_DIR} MAMA)

add_subdirectory (c_cpp/src/c)

if(WITH_CPP)
    add_subdirectory (c_cpp/src/cpp)
endif()

if (WITH_EXAMPLES)
    add_subdirectory (c_cpp/src/examples/c)
    if(WITH_CPP)
        add_subdirectory (c_cpp/src/examples/cpp)
    endif()
    if (WITH_CSHARP)
        add_subdirectory (dotnet/src/examples)
    endif()
endif ()

if (WITH_TESTTOOLS)
    add_subdirectory (c_cpp/src/testtools/capturereplay/c)
    add_subdirectory (c_cpp/src/testtools/load/c)
    if(WITH_CPP)
        add_subdirectory (c_cpp/src/testtools/load/cpp)
    endif()
    if (!WIN32)
        add_subdirectory (c_cpp/src/testtools/performance/c)
        if(WITH_CPP)
            add_subdirectory (c_cpp/src/testtools/performance/cpp)
        endif()
    endif ()
    if (WITH_CSHARP)
        add_subdirectory (dotnet/src/testtools)
    endif()
endif ()

if (WITH_UNITTEST)
    add_subdirectory (c_cpp/src/gunittest/c)
    if(WITH_CPP)
        add_subdirectory (c_cpp/src/gunittest/cpp)
    endif()
    if (WITH_CSHARP)
        add_subdirectory (dotnet/src/nunittest)
    endif()
endif ()

if (WITH_PROTON)
    add_subdirectory (c_cpp/src/c/bridge/qpid)
    add_subdirectory (c_cpp/src/c/payload/qpidmsg)
endif ()

if (WITH_JAVA)
    add_subdirectory (jni/src)
endif ()

if (WITH_CSHARP)
    add_subdirectory (dotnet/src/cs)
endif()